validation for books added
